--- a/StudentManagementSystem/Views/Student/LoginStudent.cshtml
+++ b/StudentManagementSystem/Views/Student/LoginStudent.cshtml
@@ -1,8 +1,8 @@
-﻿@* model StudentManagementSystem.Models.Student
+﻿@model StudentManagementSystem.Models.Login
 
 @{
     ViewBag.Title = "Student Login";
-} *@
+} 
 
 <!DOCTYPE html>
 <html lang="en">
@@ -38,7 +38,7 @@
 
         .input-group1 {
             padding: 5px;
-            background-color: #1a4870;
+            background-color: #5b99c2;
             border-radius: 5px;
             margin-bottom: 15px;
             height: 40px;
@@ -46,46 +46,40 @@
 
         .input-group2 {
             padding: 5px;
-            background-color: #1a4870;
+            background-color: #5b99c2;
             border-radius: 5px;
             height: 40px;
         }
 
-        .input-group1,
-        .input-group2 {
-            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-            flex-wrap: wrap;
+        .input-group1 input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            outline: none;
+            box-sizing: border-box;
+            background-color: #1a4870;
         }
 
-            .input-group1 input {
-                width: 100%;
-                padding: 10px;
-                font-size: 16px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                outline: none;
-                box-sizing: border-box;
-                background-color: #1a4870;
-            }
+        .input-group2 input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            outline: none;
+            box-sizing: border-box;
+            background-color: #1a4870;
+        }
 
-            .input-group2 input {
-                width: 100%;
-                padding: 10px;
-                font-size: 16px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                outline: none;
-                box-sizing: border-box;
-                background-color: #1a4870;
-            }
+        .input-group1 ::placeholder {
+            color: #F6F5F5;
+        }
 
-            .input-group1 ::placeholder {
-                color: #f4f4f4;
-            }
-
-            .input-group2 ::placeholder {
-                color: #f4f4f4;
-            }
+        .input-group2 ::placeholder {
+            color: #F6F5F5;
+        }
 
         .login-button {
             padding: 5px;
